[1.12.2] Update to newer FG.