@@ -1,168 +1,210 @@
 buildscript {
     repositories {
-        jcenter()
+        maven { url = 'https://maven.minecraftforge.net/' }
         maven {
-            name = "forge"
-            url = "http://files.minecraftforge.net/maven"
-        }
-		maven {
             name = "sonatype"
             url = "https://oss.sonatype.org/content/repositories/snapshots/"
         }
+        mavenCentral()
+        maven {
+            url = "https://repo.spongepowered.org/maven"
+        }
     }
     dependencies {
-        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.1.+', changing: true
     }
 }
 
 plugins {
+//    id 'net.ltgt.apt' version '0.10'
     id 'com.matthewprenger.cursegradle' version '1.4.0'
-	id 'se.bjurr.gitchangelog.git-changelog-gradle-plugin' version '1.56'
 }
 
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
+apply plugin: 'idea'
+apply plugin: 'maven-publish'
+apply plugin: 'java'
+apply from: 'https://maven.zeith.org/org/zeith/FixupFML/fix-v1.0.1-usercache.gradle'
 
 ext.configFile = file("build.txt")
 configFile.withReader {
     def prop = new Properties()
     prop.load(it)
     project.ext.config = new ConfigSlurper().parse(prop)
-	project.ext.hasConfig = { key ->
-		return config.isSet(key);
-	}
+    project.ext.hasConfig = { key ->
+        return config.isSet(key);
+    }
 }
 
 version = "${config.mod_version}"
 group = "org.zeith.${config.mod_id}"
-archivesBaseName = "${config.mod_id_fancy}-${config.minecraft_version}"
+archivesBaseName = "${config.mod_id_fancy}-${minecraft_version}"
 
-sourceCompatibility = targetCompatibility = "1.8"
-compileJava {
-    sourceCompatibility = targetCompatibility = "1.8"
-}
+sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-    version = "${config.minecraft_version}-${config.forge_version}"
-    runDir = "run"
-    mappings = "${config.mcp}"
-    makeObfSourceJar = false
-	replace 'required-after:hammercore', "required-after:hammercore@[${config.hl_version},)"
-    replace '@VERSION@', config.mod_version
-    replace '@CF_ID@', config.cf_project
-	replace '@FINGERPRINT@', System.env.MOD_SIGN_SHA1 != null ? System.env.MOD_SIGN_SHA1 : 'N/A'
+    mappings channel: 'stable', version: '39-1.12'
+    accessTransformers(
+            file('libraries/dev_at.cfg'), // required for dev env to function
+            file('src/main/resources/META-INF/accesstransformer.cfg')
+    )
+
+    runs {
+        client {
+            workingDirectory project.file('run/client')
+
+            jvmArgs([
+                    '-Dfml.coreMods.load=org.zeith.hammeranims.core.asm.HACoremod,com.zeitheron.hammercore.asm.HCASM',
+                    '-Dmixin.hotSwap=true',
+                    '-Dmixin.checks.interfaces=true',
+                    '-Dmixin.debug.export=true',
+                    "-XX:+UseConcMarkSweepGC",
+                    "-XX:-UseAdaptiveSizePolicy"
+            ])
+
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.console.level', 'debug'
+            args([
+                    "-username",
+                    "Zeitheron",
+                    "-uuid",
+                    "63fa4c485b5640809727d5d59663e603"
+            ])
+        }
+
+        server {
+            workingDirectory project.file('run/server')
+
+            jvmArgs([
+                    '-Dfml.coreMods.load=org.zeith.hammeranims.core.asm.HACoremod,com.zeitheron.hammercore.asm.HCASM',
+                    '-Dmixin.hotSwap=true',
+                    '-Dmixin.checks.interfaces=true',
+                    '-Dmixin.debug.export=true'
+            ])
+
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+            property 'forge.logging.console.level', 'debug'
+        }
+    }
+}
+
+configurations {
+    embed
+    tcImplementation
+    tcModsFolder
+    implementation.extendsFrom(embed)
+    implementation.extendsFrom(tcImplementation)
+    implementation.extendsFrom(tcModsFolder)
 }
 
 repositories {
+    mavenCentral()
     maven {
         name = "Zeith maven"
         url = "https://maven.zeith.org"
     }
+    maven {
+        url = "https://jitpack.io"
+    }
 }
 
 dependencies {
-	if(hasConfig("hl_version"))
-	{
-        deobfCompile "org.zeith.HammerLib:HammerLib-${config.minecraft_version}:${config.hl_version}:deobf"
-	}
+    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    deobfCompile "org.zeith.ColoredLux:ColoredLux-${config.minecraft_version}:12.6.30"
-	
-	if(hasConfig("viveapi_version"))
-	{
-		deobfCompile "org.zeith.viveapi:VivecraftAPI-${config.minecraft_version}:${config.viveapi_version}:deobf"
-	}
+    tcImplementation "org.zeith.HammerLib:HammerLib-${minecraft_version}:${hl_version}:deobf"
+
+    if (hasConfig("viveapi_version")) {
+        compileOnly "org.zeith.viveapi:VivecraftAPI-${minecraft_version}:${config.viveapi_version}:deobf"
+    }
+
+    ////// UTILITY STUFF //////
+    // implementation 'java-oo:javac-oo-plugin:0.5'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    compileOnly 'org.jetbrains:annotations:24.0.1'
+    ///////////////////////////
+
+    implementation("net.minecraftforge:mergetool:0.2.3.3") { force = true }
 }
 
-processResources
-{
-    inputs.property "version", project.version
-    inputs.property "mcversion", config.minecraft_version
+configurations.configureEach {
+    exclude group: "net.minecraftforge", module: "mergetool"
+}
+
+import net.minecraftforge.gradle.common.task.SignJar
+import java.nio.file.Files
+
+def startTasks = gradle.startParameter.taskNames
+def intellijIDE = (System.getProperty("idea.sync.active") == "true" || System.getProperty("idea.active") == "true") && !startTasks.contains("build") && !startTasks.contains("buildAndUploadMod") && !startTasks.contains("publishAllPublicationsToMavenRepository") && !startTasks.contains("publish") && !startTasks.contains("jar")
+
+println "Running IntelliJ IDE: " + intellijIDE
+
+task cleanReplaces(type: Delete) {
+    delete "build/sources/replaced"
+}
+
+if (tasks.contains(build) && !intellijIDE) {
+    task applyReplaces(type: Copy) {
+        from('src/main/java')
+        into 'build/sources/replaced'
+
+        filter { line ->
+            line.replace('required-after:hammercore', "required-after:hammercore@[${hl_version},)")
+                    .replace("@VERSION@", "${config.mod_version}")
+        }
+    }
+
+    compileJava.dependsOn applyReplaces
+
+    sourceSets {
+        main {
+            java {
+                srcDirs = ["build/sources/replaced"]
+            }
+        }
+    }
+}
+
+processResources {
+    duplicatesStrategy = DuplicatesStrategy.INCLUDE
+    inputs.property "version", config.mod_version
+    inputs.property "mcversion", minecraft_version
     from(sourceSets.main.resources.srcDirs) {
         include 'mcmod.info'
-		include 'pack.mcmeta'
-        expand 'version':project.version, 'mcversion':project.minecraft.version
+        include 'pack.mcmeta'
+        expand 'version': config.mod_version, 'mcversion': minecraft_version
     }
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
-		exclude 'pack.mcmeta'
-    }
-	rename "mod_id_at.cfg", "META-INF/${config.mod_id}_at.cfg"
-}
-
-task deobfJar(type: Jar) {
-    from sourceSets.main.output
-    classifier = 'deobf'
-    manifest {
-        attributes 'FMLAT': "${config.mod_id}_at.cfg"
-
-        attributes "Specification-Title": config.mod_id_fancy
-        attributes "Specification-Vendor": "Zeitheron"
-        attributes "Specification-Version": "1"
-        attributes "Implementation-Title": config.mod_id_fancy
-        attributes "Implementation-Version": config.mod_version
-        attributes "Implementation-Vendor": "Zeitheron"
-        attributes "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        exclude 'pack.mcmeta'
     }
 }
 
-task srcJar(type: Jar, dependsOn: classes) {
-    from sourceSets.main.allSource
-    classifier = 'sources'
-	manifest {
-        attributes 'FMLAT': "${config.mod_id}_at.cfg"
-
-        attributes "Specification-Title": config.mod_id_fancy
-        attributes "Specification-Vendor": "Zeitheron"
-        attributes "Specification-Version": "1"
-        attributes "Implementation-Title": config.mod_id_fancy
-        attributes "Implementation-Version": config.mod_version
-        attributes "Implementation-Vendor": "Zeitheron"
-        attributes "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-    }
-}
 
 jar {
-	manifest {
-		attributes 'FMLAT': "${config.mod_id}_at.cfg"
+    from(configurations.embed.collect { it.isDirectory() ? it : zipTree(it) }) {
+        exclude 'LICENSE.txt', 'META-INF/MANIFSET.MF', 'META-INF/maven/**', 'META-INF/*.RSA', 'META-INF/*.SF'
+    }
 
-        attributes "Specification-Title": config.mod_id_fancy
-        attributes "Specification-Vendor": "Zeitheron"
-        attributes "Specification-Version": "1"
-        attributes "Implementation-Title": config.mod_id_fancy
-        attributes "Implementation-Version": config.mod_version
-        attributes "Implementation-Vendor": "Zeitheron"
-        attributes "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
-	}
+    manifest {
+        attributes([
+                "ForceLoadAsMod"             : "true",
+                "FMLCorePlugin"              : "org.zeith.hammeranims.core.asm.HACoremod",
+                "FMLCorePluginContainsFMLMod": "false",
+                "FMLAT"                      : "accesstransformer.cfg",
+
+                "Specification-Title"        : "HammerAnimations",
+                "Specification-Vendor"       : "DragonForge",
+                "Specification-Version"      : "1", // We are version 1 of ourselves
+                "Implementation-Title"       : "HammerAnimations",
+                "Implementation-Version"     : "${config.mod_version}",
+                "Implementation-Vendor"      : "DragonForge",
+                "Implementation-Timestamp"   : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
+    }
 }
 
-artifacts {
-    archives deobfJar
-	archives srcJar
-}
-
-curseforge {
-	apiKey = System.env.CURSEFORGE_API_KEY != null ? System.env.CURSEFORGE_API_KEY : '0'
-	project {
-		id = "${config.cf_project}"
-		changelogType = 'html'
-		changelog = file('changelog.html')
-		releaseType = "${config.release_type}"
-		addGameVersion "${config.minecraft_version}"
-		addGameVersion "Forge"
-		addGameVersion "Java 8"
-		mainArtifact(jar) {
-		  displayName = "[${config.minecraft_version}] ${config.mod_name} - ${config.mod_version}"
-		}
-		if(hasConfig("hl_version"))
-		{
-			relations {
-				requiredLibrary 'Hammer-Lib'
-			}
-		}
-	}
-}
-
-task signJar(type: SignJar, dependsOn: reobfJar) {
+task signJar(type: SignJar, dependsOn: jar) {
     onlyIf {
         System.env.MC_KS_PASS != null
     }
@@ -174,57 +216,105 @@ task signJar(type: SignJar, dependsOn: reobfJar) {
     outputFile = jar.archivePath
 }
 
-task signDeobfJar(type: SignJar, dependsOn: deobfJar) {
-    onlyIf {
-        System.env.MC_KS_PASS != null
+jar.finalizedBy('reobfJar')
+assemble.finalizedBy('signJar')
+signJar.finalizedBy('cleanReplaces')
+
+
+task deobfJar(type: Jar) {
+    from sourceSets.main.output
+    classifier = 'deobf'
+    manifest {
+        attributes([
+                "ForceLoadAsMod"             : "true",
+                "FMLCorePlugin"              : "org.zeith.hammeranims.core.asm.HACoremod",
+                "FMLCorePluginContainsFMLMod": "false",
+                "FMLAT"                      : "accesstransformer.cfg",
+
+                "Specification-Title"        : "HammerAnimations",
+                "Specification-Vendor"       : "DragonForge",
+                "Specification-Version"      : "1", // We are version 1 of ourselves
+                "Implementation-Title"       : "HammerAnimations",
+                "Implementation-Version"     : "${config.mod_version}",
+                "Implementation-Vendor"      : "DragonForge",
+                "Implementation-Timestamp"   : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
     }
-    keyStore = System.env.MC_KS_PATH
-    alias = System.env.MC_KS_ALIAS
-    storePass = System.env.MC_KS_PASS
-    keyPass = System.env.MC_KS_PASS
-    inputFile = deobfJar.archivePath
-    outputFile = deobfJar.archivePath
 }
 
-task signSrcJar(type: SignJar, dependsOn: srcJar) {
-    onlyIf {
-        System.env.MC_KS_PASS != null
+task srcJar(type: Jar, dependsOn: classes) {
+    from sourceSets.main.allSource
+    classifier = 'sources'
+    manifest {
+        attributes([
+                "ForceLoadAsMod"             : "true",
+                "FMLCorePlugin"              : "org.zeith.hammeranims.core.asm.HACoremod",
+                "FMLCorePluginContainsFMLMod": "false",
+                "FMLAT"                      : "accesstransformer.cfg",
+
+                "Specification-Title"        : "HammerAnimations",
+                "Specification-Vendor"       : "DragonForge",
+                "Specification-Version"      : "1", // We are version 1 of ourselves
+                "Implementation-Title"       : "HammerAnimations",
+                "Implementation-Version"     : "${config.mod_version}",
+                "Implementation-Vendor"      : "DragonForge",
+                "Implementation-Timestamp"   : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
+        ])
     }
-    keyStore = System.env.MC_KS_PATH
-    alias = System.env.MC_KS_ALIAS
-    storePass = System.env.MC_KS_PASS
-    keyPass = System.env.MC_KS_PASS
-    inputFile = srcJar.archivePath
-    outputFile = srcJar.archivePath
 }
 
-task makeChangelog(type: se.bjurr.gitchangelog.plugin.gradle.GitChangelogTask) {
-    file = new File("changelog.html")
-    untaggedName = "Version ${project.version}"
-    fromCommit = "${config.start_git_commit}"
-    toRef =  "HEAD"
-    gitHubIssuePattern = "nonada123";
-    templateContent = """
-{{#tags}}
-<h3><a href="https://github.com/dragon-forge/maven">To get developer builds, consult our maven repository</a></h3>
-<h1>Changes:</h1>
-  <ul>
-    {{#commits}}
-    <li> {{{message}}}</li>
-    {{/commits}}
-  </ul>
-{{/tags}}
-"""
+artifacts {
+    archives deobfJar
+    archives srcJar
+}
+
+curseforge {
+    apiKey = System.env.CURSEFORGE_API_KEY != null ? System.env.CURSEFORGE_API_KEY : '0'
+    project {
+        id = "${config.cf_project}"
+        changelogType = 'html'
+        changelog = ""
+        releaseType = "${config.release_type}"
+        addGameVersion "${minecraft_version}"
+        addGameVersion "Forge"
+        addGameVersion "Java 8"
+        mainArtifact(jar) {
+            displayName = "[${minecraft_version}] ${config.mod_name} - ${config.mod_version}"
+        }
+        relations {
+            requiredLibrary 'Hammer-Lib'
+        }
+    }
 }
 
 build.dependsOn signJar
-build.dependsOn signDeobfJar
-build.dependsOn signSrcJar
-tasks.build.dependsOn makeChangelog
+
+tasks.register('copyDepsToRuntime') {
+    doLast {
+        def directories = []
+        minecraft.runs.each {
+            def f = new File(it.workingDirectory, "mods")
+            directories.add(f)
+            f.mkdirs()
+            f.listFiles().each {
+                if (it.getName().startsWith("__gradle__"))
+                    it.delete()
+            }
+        }
+        configurations.tcModsFolder.files.each {
+            directories.each { File dir ->
+                def runFile = new File(dir, "__gradle__${it.name}")
+                runFile.delete()
+                Files.copy(it.toPath(), runFile.toPath())
+            }
+        }
+    }
+}
 
 afterEvaluate {
-	tasks["curseforge${config.cf_project}"].dependsOn.add(signJar)
-	tasks["curseforge${config.cf_project}"].dependsOn.add(signDeobfJar)
-	tasks["curseforge${config.cf_project}"].dependsOn.add(signSrcJar)
-	tasks["curseforge${config.cf_project}"].dependsOn.add(makeChangelog)
+    tasks["curseforge${config.cf_project}"].dependsOn.add(signJar)
+    
+    tasks['downloadAssets'].dependsOn.add('copyDepsToRuntime')
+
+    tasks['downloadAssets'].dependsOn.add('fixupForgeJars')
 }
